# weight-tracker

./: .gitignore  ChangeLog.md  package.yaml  sample.csv  shell.nix  stack.yaml  weight-tracker.cabal  weights.csv
.stack-work/: stack.sqlite3
.stack-work/ghci/19ee3f53/: cabal_macros.h
.stack-work/ghci/6920f08f/: cabal_macros.h
.stack-work/ghci/7e2ff885/: cabal_macros.h
.stack-work/ghci/7f12818b/: cabal_macros.h
.stack-work/ghci/98c322a9/: cabal_macros.h
.stack-work/ghci/bdfe4908/: cabal_macros.h
.stack-work/ghci/d082a36f/: cabal_macros.h
.stack-work/ghci/fc780494/: cabal_macros.h
.stack-work/hoogle/x86_64-osx/276e0c4712f74afcf5befa6c65951baf856bd3ee365fca21116b2b57178731f0/8.6.5/: database.warn
app/: AppUtils.hs  DisplayAverages.hs  Grid.hs  Main.hs  matt@matts-laptop.34879:1629369458
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
src/: Averages.hs  Date.hs  Lib.hs  Main.hs  Types.hs
src/.liquid/: Date.hs.bak  Date.hs.cst.html  Date.hs.err  Date.hs.html  Date.hs.json  Date.hs.smt2  Date.hs.vim.annot  Main.hs.bak  Main.hs.bspec  Main.hs.cst.html  Main.hs.err  Main.hs.html  Main.hs.json  Main.hs.smt2  Main.hs.vim.annot
