name:                weight-tracker
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/weight-tracker
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2019 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable weight-tracker
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  -- ghc-options:         -Wall
                      --  -Werror
  build-depends:       base >= 4.7 && < 5
                     , cassava
                     , foldl
                     , split
                     , text
                     , time
                    , turtle
                     , unordered-containers
  other-modules:     Date